# right-click-helper

./: .commit-template.json  .editorconfig  .gitignore  CHANGELOG.en-US.md  CHANGELOG.zh-CN.md  LICENSE  README.md  external-dependencies-LICENSE.md  poetry.toml  pyproject.toml  requirements.txt  start.spec
.data/: user.json
.github/workflows/: build-app.yml
build-scripts/: build-ui.py  build.py  get-iconfont.py
scripts/: getLatestChangeLog.py
src/resource/: main.qrc  main_rc.py
src/resource/css/markdown/: typo.css
src/resource/sqss/component/: ele_py_button.sqss  ele_py_message_box.sqss
src/resource/template/: user.json
src/rightClickHelper/: app.py  mainWindow.py
src/rightClickHelper/component/: elePyDialog.py  elePyDockWidget.py  elePyWidget.py
src/rightClickHelper/component/core/: __init__.py  absWidget.py  lifeStage.py
src/rightClickHelper/component/form/: elePyButton.py  elePySelect.py
src/rightClickHelper/component/label/: dragLabel.py  elePyIcon.py  elePyLabel.py
src/rightClickHelper/component/notice/: elePyMessage.py  elePyMessageBox.py
src/rightClickHelper/component/popover/: basePopover.py  elePyMenuPopover.py  elePyPopover.py  elePyTooltip.py  menuPopover.py  popover.py  tooltip.py
src/rightClickHelper/config/: __init__.py  env.py  envs.py
src/rightClickHelper/controller/about/: __init__.py
src/rightClickHelper/controller/management/: __init__.py  controller.py  menuItemCard.py
src/rightClickHelper/tool/: __init__.py  animationTool.py  effectTool.py  markDownTool.py  pathTool.py  regTool.py  requestTool.py  systemTool.py  widgetTool.py
src/rightClickHelper/view/: mainInterFace.py  mainInterFace.ui
test/: TestRegTool.py
test/request/: TestRequestResource.py
test/tool/: testTool.py
test/view/: testDragLabelAndDialog.py  testForm.py  testNotice.py  testPopoverWidget.py  testWidget.py
(+16 files in other folders)
