[tool.poetry]
name        = "right-click-helper"
appName     = "Right Click Helper"
version     = "1.0.4.0"
description = "由python pyqt模块开发的一款windows环境下卡片化右键菜单选项管理工具."
authors = ["yijie4188 <yijie4188@gmail.com>"]

  [[tool.poetry.source]]
  name = "aliyun"
  url = "http://mirrors.aliyun.com/pypi/simple/"

  [tool.poetry.dependencies]
  python                    = "^3.9"
  altgraph                  = "^0.17"
  future                    = "^0.18.2"
  pefile                    = "^2019.4.18"
  pyinstaller               = "^4.1"
  pyinstaller-hooks-contrib = "^2020.10"
  PyQt5                     = "^5.15.2"
  PyQt5-sip                 = "^12.8.1"
  pywin32                   = "^300"
  pywin32-ctypes            = "^0.2.0"
  tqdm                      = "^4.54.1"
  sqss                      = "^0.1.3"

  [tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
